hphp/test/slow/traits/conflicts/promote_both_ways.php.expectf
Dog
Cat

Fatal error: Call to private C::f() from invalid context in %s/promote_both_ways.php on line 19
